Added EasyUploads component for filtering files when selecting files for uploading

--- a/dynamo-showcase/src/main/resources/menu.properties
+++ b/dynamo-showcase/src/main/resources/menu.properties
@@ -7,3 +7,5 @@ movies.menu.1.3.displayName=Split Screen (vertical)
 movies.menu.1.3.destination=VerticalMoviesSplitView
 movies.menu.1.4.displayName=Editable table
 movies.menu.1.4.destination=TabularMoviesView
+movies.menu.1.5.displayName=Upload form
+movies.menu.1.5.destination=UploadFormView
