--- a/dynamo-vaadin/pom.xml
+++ b/dynamo-vaadin/pom.xml
@@ -32,6 +32,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.vaadin.addon</groupId>
+			<artifactId>easyuploads</artifactId>
+			<version>7.4.10</version>
+		</dependency>
+		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>dynamo-core</artifactId>
 			<version>${project.version}</version>
