--- a/pom.xml
+++ b/pom.xml
@@ -109,10 +109,12 @@
 		<mockito.version>1.10.19</mockito.version>
 		<commons.io.version>2.4</commons.io.version>
 		<commons.lang.version>2.6</commons.lang.version>
+		<commons.beanutils.version>1.9.3</commons.beanutils.version>
 		<h2.version>1.4.187</h2.version>
 		<poi.version>3.12</poi.version>
 		<opencsv.version>2.3</opencsv.version>
 		<javax.servlet.api.version>3.0.1</javax.servlet.api.version>
+		<javax.cdi-api.version>1.1</javax.cdi-api.version>
 		<javax.validation.api.version>1.0.0.GA</javax.validation.api.version>
 		<xlsx-streamer.version>0.2.9</xlsx-streamer.version>
 		<junit-addons.version>1.4</junit-addons.version>
@@ -425,6 +427,11 @@
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
 				<version>${commons.io.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-beanutils</groupId>
+				<artifactId>commons-beanutils</artifactId>
+				<version>${commons.beanutils.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>junit</groupId>
