--- a/dynamo-core/pom.xml
+++ b/dynamo-core/pom.xml
@@ -60,6 +60,10 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
